Added Katie's Pages to the app
Before we got version control working we both started developing some ideas for the app interface. Since they were a part of different Android Studio projects, there was a bit of refactoring that had to be done. Pages were created by Katie.

Co-Authored-By: katherineskipper <katherineskipper@users.noreply.github.com>

--- a/Heimdall/app/src/main/AndroidManifest.xml
+++ b/Heimdall/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         <activity android:name=".ForgotPassword" />
         <activity android:name=".Home" />
         <activity android:name=".Registration" />
+        <activity android:name=".Settings" />
+        <activity android:name=".AddTwitter" />
+        <activity android:name=".company_info" />
+        <activity android:name=".Recommendation" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
