--- a/Heimdall/app/src/main/AndroidManifest.xml
+++ b/Heimdall/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".RecommendationCompanyInfo"></activity>
         <activity android:name=".AddCard" />
         <activity android:name=".CardInfo" />
         <activity android:name=".ForgotPassword" />
@@ -18,7 +19,7 @@
         <activity android:name=".AddTwitter" />
         <activity android:name=".company_info" />
         <activity android:name=".Recommendation" />
-        <activity android:name=".Graph"/>
+        <activity android:name=".Graph" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
